--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "twilio": "^4.19.0",
-    "@supabase/supabase-js": "^2.38.0",
-    "dotenv": "^16.3.1"
-  },
+  "express": "^4.18.2",
+  "axios": "^1.6.0",
+  "@supabase/supabase-js": "^2.38.0",
+  "dotenv": "^16.3.1"
+},
   "engines": {
     "node": ">=16.0.0"
   },
   "keywords": ["whatsapp", "voting", "bot", "twilio", "supabase"],
   "author": "Your Name",
   "license": "MIT"
+
 }
