--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "whatsapp-voting-bot",
+  "name": "whatsapp-bot-backend",
   "version": "1.0.0",
-  "description": "نظام التصويت الذكي عبر WhatsApp",
+  "description": "WhatsApp Bot with Supabase integration",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-  "express": "^4.18.2",
-  "axios": "^1.6.0",
-  "@supabase/supabase-js": "^2.38.0",
-  "dotenv": "^16.3.1"
-},
-  "engines": {
-    "node": ">=16.0.0"
+    "express": "^4.18.2",
+    "axios": "^1.6.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "dotenv": "^16.3.1"
   },
-  "keywords": ["whatsapp", "voting", "bot", "twilio", "supabase"],
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": ["whatsapp", "bot", "supabase"],
   "author": "Your Name",
   "license": "MIT"
-
 }
