--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.2",
     "axios": "^1.6.0",
     "@supabase/supabase-js": "^2.38.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "twilio": "^5.0.0"  <-- **يجب إضافة هذا السطر** (تأكد من استخدام آخر إصدار)
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
