--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "twilio": "^4.19.0",
     "axios": "^1.6.0",
     "@supabase/supabase-js": "^2.38.0",
-    "dotenv": "^16.3.1",
-    "twilio": "^5.0.0"  <-- **يجب إضافة هذا السطر** (تأكد من استخدام آخر إصدار)
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
