Modify Twilio WhatsApp number in .env
Updated the WhatsApp number for Twilio settings.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # إعدادات Twilio WhatsApp
 TWILIO_ACCOUNT_SID=AC01f96f1e7c3851557bc358be9eb1ab4b
 TWILIO_AUTH_TOKEN=0ee76e886ac7396a9d6924bd947abd72
-TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
+TWILIO_WHATSAPP_NUMBER=whatsapp:+96477777499748  <-- **تم التعديل هنا**
 
 # إعدادات Supabase (نفس القيم السابقة)
 SUPABASE_URL=https://ilekksctcrvfepnnrrvr.supabase.co
